# livekit-demo-

./: .env.local  README.md  agent.py  agent1.py  pyproject.toml  requirements.txt
recordings/: session_report_20251205_210014.json  session_report_20251205_210915.json
sip-config/: .env.example  README.md  dispatch-rule.json  docker-compose.yml  inbound-trunk.json  livekit.yaml  outbound-trunk.json  setup-sip-trunk.ps1  sip-config.yaml  sip-trunk.yaml  sip.yaml  sip_manager.py  twilio-setup.md
